updated style of guuey-date-input. updated guuey-custom-text-input to properly delete. updated guuey-list-input to be independent of internal firebase element.

--- a/src/elements/guuey-custom-text-input/guuey-custom-text-input.html
+++ b/src/elements/guuey-custom-text-input/guuey-custom-text-input.html
@@ -130,7 +130,9 @@ fieldDisabled(boolean)
         this.editDisabled=!this.editDisabled;
       },
       deleteCustom:function(e){
-        this.$.guueyInputDB.destroy();
+        this.value=null;
+        this.label=null;
+        this.label2=null;
       },
       editQuery:function(query1400){
         if(query1400){
