--- a/src/pages/test/test-test/new-list.html
+++ b/src/pages/test/test-test/new-list.html
@@ -1,6 +1,11 @@
-<link rel="import" href="dependencies.html" />
+<link rel="import" href="../../../../bower_components/polymer/polymer.html" />
+<link rel="import" href="../../../../bower_components/paper-input/paper-textarea.html" />
+<link rel="import" href="../../../../bower_components/paper-button/paper-button.html" />
+<link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
+<link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
+<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html" />
 
-<dom-module id="guuey-list-input">
+<dom-module id="new-list">
 
   <iron-media-query
     query="(max-width:1600px)"
@@ -130,7 +135,7 @@
   <script>
 
     Polymer({
-      is:"guuey-list-input",
+      is:"new-list",
       properties:{
         value:{
           type:Object,
