--- a/src/pages/care-plan/su-goals/dependencies.html
+++ b/src/pages/care-plan/su-goals/dependencies.html
@@ -19,3 +19,4 @@
 <link rel="import" href="../../../elements/guuey-date-input/guuey-date-input.html" />
 <link rel="import" href="../../../elements/guuey-notify/guuey-notify.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
+<link rel="import" href="../../../elements/guuey-new-goal-modal/guuey-new-goal-modal.html" />
