--- a/src/pages/care-plan/su-medication/dependencies.html
+++ b/src/pages/care-plan/su-medication/dependencies.html
@@ -6,6 +6,7 @@
 <link rel="import" href="../../../../bower_components/paper-fab/paper-fab.html" />
 <link rel="import" href="../../../../bower_components/paper-dialog/paper-dialog.html" />
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html" />
+<link rel="import" href="../../../../bower_components/paper-input/paper-textarea.html" />
 <link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
 <link rel="import" href="../../../../bower_components/iron-collapse/iron-collapse.html" />
 <link rel="import" href="../../../../bower_components/paper-checkbox/paper-checkbox.html" />
