--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -31,3 +31,4 @@
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html" />
 <link rel="import" href="../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
+<link rel="import" href="elements/firebase-storage/firebase-storage.html" />
